<resources>
    <string name="app_name">ConcussionConnect</string>
    <string name="register_string">Register</string>
    <string name="consent_form"><u>Consent Form</u></string>
    <string name="key_info"><u>Key Information for Evaluation of a Balance and Cognitive Dual-Task in College Students</u></string>
    <string name="what_am_i_doing"><u>What Am I Being Asked To Do?</u></string>
    <string name="study_about"><u>What Is This Study About and What Procedures Will You be Asked to Follow?</u></string>
    <string name="risks"><u>Are There Any Risks or Discomforts you Might Experience by Being in this Study?</u></string>
    <string name="reasons"><u>What Are the Reasons You Might Want to Volunteer For This Study?</u></string>
    <string name="do_you_have_to_take_part"><u>Do You Have to Take Part in the This Study?</u></string>
    <string name="purpose"><u>Purpose:</u></string>
    <string name="ExclusionInclusion"><u>Exclusion/Inclusion Criteria:</u></string>
    <string name="Procedures"><u>Procedures:</u></string>
    <string name="risksOrDiscomforts"><u>Risks or Discomforts:</u></string>
    <string name="benefits"><u>Benefits:</u></string>
    <string name="compensation"><u>Compensation:</u></string>
    <string name="storingInfo"><u>Storing and Sharing Your Information:</u></string>
    <string name="photUse"><u>Use of Photographs, Audio, or Video Recordings:</u></string>
    <string name="confidentiality"><u>Confidentiality:</u></string>
    <string name="costs"><u>Costs to You:</u></string>
    <string name="questions"><u>Questions about the Study:</u></string>
    <string name="yourRights"><u>Questions about Your Rights as a Research Participant:</u></string>
    <string name="questionsDescription">If you have any questions about the study, you may contact Dr. Michelle
        LaPlaca, the Principal Investigator at telephone (404)-385-0629 or <u>laplaca@gatech.edu</u>.</string>
    <string name="contactInfo"><u>Contact Information</u></string>
    <string name="students"><u>Students:</u></string>
    <string name="nonstudents"><u>Non-students:</u></string>
    <string name="SSQ"><u>Study Screening Questionnaire</u></string>
    <string name="demographic"><u>Demographic Information:</u></string>
    <string name="medical"><u>Medical / Health Information:</u></string>
    <string name="medical9">9. Have you been diagnosed with a concussion in the<u> last 6 months?</u></string>
    <string name="medical10">10. Have you consumed alcohol or any other potentially mind altering
drugs or medications within the <u>past 12 hours?</u></string>
    <string name="medical11">11. Do you currently have or are you under the care of a doctor for any neurological injury
or condition that may be associated with<u>neurological impairment?</u></string>
    <string name="medical12">12.<u>Are you currently</u> being treated for, or taking medications for any of the following?
 </string>
    <string name="medication">Did you take this medication <u> last 24 hours?</u></string>
    <string name="medical13a">13a. In your  <u> lifetime</u>, how many times have you had a concussion?</string>
    <string name="medical15">15. For each of the following symptoms please rate how you <u>currently feel</u>, regardless of
whether or not you have ever had a concussion. </string>
    <string name="SCATTrial3">Indicate whether the subject recited <u>ALL</u> the months of the year backwards correctly</string>
    <string-array name="ratings">
        <item>0 - None</item>
        <item>1 - Slightly Mild</item>
        <item>2 - Mild</item>
        <item>3 - Slightly Moderate</item>
        <item>4 - Moderate</item>
        <item>5 - Slightly Severe</item>
        <item>6 - Severe</item>
    </string-array>
    <string-array name="scale">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="memory_word_list_1">
        <item>Elbow</item>
        <item>Apple</item>
        <item>Carpet</item>
        <item>Saddle</item>
        <item>Bubble</item>
    </string-array>
    <string-array name="memory_word_list_2">
        <item>Candle</item>
        <item>Paper</item>
        <item>Sugar</item>
        <item>Sandwich</item>
        <item>Wagon</item>
    </string-array>
    <string-array name="memory_word_list_3">
        <item>Baby</item>
        <item>Monkey</item>
        <item>Perfume</item>
        <item>Sunset</item>
        <item>Iron</item>
    </string-array>
    <string-array name="memory_word_list_4">
        <item>Finger</item>
        <item>Penny</item>
        <item>Blanket</item>
        <item>Lemon</item>
        <item>Insect</item>
    </string-array>
    <string-array name="symptom_list">
        <item>Headache</item>
        <item>Pressure in head</item>
        <item>Neck Pain</item>
        <item>Nausea or vomiting</item>
        <item>Dizziness</item>
        <item>Blurred Vision</item>
        <item>Balance Problems</item>
        <item>Sensitivity to light</item>
        <item>Sensitivity to noise</item>
        <item>Feeling slowed down</item>
        <item>Feeling like "in a fog"</item>
        <item>"Don't feel right"</item>
        <item>Difficulty concentrating</item>
        <item>Difficulty Remembering</item>
        <item>Fatigue or low energy</item>
        <item>Confusion</item>
        <item>Drowsiness</item>
        <item>More emotional</item>
        <item>Irritability</item>
        <item>Sadness</item>
        <item>Nervous or Anxious</item>
        <item>Trouble falling asleep</item>


    </string-array>
    <string-array name="roster">
        <item>John Smith WR #85</item>
        <item>Rick Owens LB #52</item>
    </string-array>
    <string-array name="wordBankSelector">
        <item>List 1</item>
        <item>List 2</item>
        <item>List 3</item>
        <item>List 4</item>
    </string-array>
    <string-array name="months_in_reverse">
        <item>December\nNovember\nOctober\nSeptember\nAugust\nJuly\nJune\nMay\nApril\nMarch\nFebruary\nJanuary</item>
    </string-array>
    <string name="title_activity_consent_form">ConsentFormActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
