<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:text="@string/key_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/mulish"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/gradient_bg"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_rounded_shape"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/nunito"
            android:inputType="textCapSentences"
            android:textColor="#FFF"
            android:textSize="17dp"
            android:text="Skip Forms" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:text="@string/what_am_i_doing"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You are being asked to be a volunteer in a research study. This form will give you key  information to help you decide if you would like to participate. Your participation is  voluntary. As you read, please feel free to ask any questions you may have about the  research."
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/study_about"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" The purpose of this study is to determine if performing a balance test concurrently  with a memory task will result in different performance levels than doing the tasks  separately. It is a feasibility test to see how college aged students perform. In the  future, the test may be used as a concussion assessment test. The premise is that  doing two tasks concurrently will allow more sensitivity to assess neurological  performance than doing the tasks separately. Your participation will last less than 45  minutes, and you will be filling out a few short questionnaires as well as doing 4  separate 2 minute virtual reality tests (detailed further below)."
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/risks"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" While the risk is expected to be minimal, it is possible that you will feel claustrophobic  and / or discomfort from the virtual reality google and in-google environment. You will  also be asked to do standing balance tests while wearing the googles and there is a risk  of falling, but the researchers are trained to guard you against falling. There are more details below and you can decide whether or not you want to participate based on  these possible risks. "
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reasons"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" The investigators of this study are interested in your opinion about the tests. While  the Dual Task test will not benefit you directly, your participation will aid in  determining if the test may be useful to detect concussion in the future."
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/study_about"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" It is fully your decision if you wish to be in this study or not. If you choose not to  participate, or choose to participate and later determine you no longer wish to, you  will not lose any rights, services, or benefits as a result of your withdrawal. The study  is completely voluntary. There are no alternative way to assess the feasibility of a dual  task available."
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_rounded_shape"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/nunito"
                android:inputType="textCapSentences"
                android:textColor="#FFF"
                android:textSize="17dp"
                android:text="Back to Login" />

            <Button
                android:id="@+id/consentFormButton"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/custom_rounded_shape"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/nunito"
                android:inputType="textCapSentences"
                android:textColor="#FFF"
                android:textSize="17dp"
                android:text="Consent Form" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>